[package]
name = "barkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["barkit-extract"]

[dependencies]
clap = { version = "4.5.4", features = ["env", "derive"] }
barkit-extract = { version = "0.1.0", path = "barkit-extract" }

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false