[package]
name = "barkit"
version = "0.1.1" # managed by release.sh
edition = "2021"
authors = ["Nikita Syzrantsev syzrantsev.n@yandex.ru"]
description = "BarKit — a cross-platform and ultrafast toolkit for barcodes manipulation in FASTQ files"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/nsyzrantsev/barkit"
repository = "https://github.com/nsyzrantsev/barkit"
keywords = ["bioinformatics", "sequencing", "barcodes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["barkit-extract"]

[dependencies]
clap = { version = "4.5.23", features = ["env", "derive"] }
barkit-extract = { version = "0.1.1", path = "barkit-extract" }

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
