[package]
name = "barkit-extract"
version = "0.1.1" # managed by release.sh
edition = "2021"
authors = ["Nikita Syzrantsev syzrantsev.n@yandex.ru"]
description = "Tool for extracting barcode nucleotide sequence according to a specified regex pattern"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/nsyzrantsev/barkit"
repository = "https://github.com/nsyzrantsev/barkit"
keywords = ["bioinformatics", "sequencing", "barcodes"]
rust-version = "1.80.0"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
flate2 = "1.0.34"
regex = "1.11.1"
seq_io = "0.3.2"
thiserror = "2.0.3"
rayon = "1.10.0"
fancy-regex = "0.14.0"
lz4 = "1.28.0"
gzp = "0.11.3"
indicatif = "0.17.8"
console = "0.15.8"

[dev-dependencies]
rstest = "0.23.0"
