[package]
name = "extract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
fancy-regex = "0.13.0"
flate2 = "1.0.30"
pyo3 = "0.21.2"
regex = "1.10.4"
seq_io = "0.3.2"
thiserror = "1.0.61"
