[package]
name = "extract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
flate2 = "1.0.30"
regex = "1.10.4"
seq_io = "0.3.2"
thiserror = "1.0.61"
rayon = "1.10.0"
fancy-regex = "0.13.0"
lz4 = "1.26.0"
gzp = "0.11.3"
indicatif = "0.17.8"
console = "0.15.8"

[dev-dependencies]
rstest = "0.22.0"
