[package]
name = "tre_regex"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.69.4"
autotools = {version = "0.2", optional = true}
fs_extra = {version = "1.3.0", optional = true}
pkg-config = "0.3.30" # XXX - this should be optional but we can't.

[features]
default = ["approx", "vendored"]
vendored = ["autotools", "fs_extra"]
approx = []
